Update pipeline.yaml for Azure Pipelines

--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -40,7 +40,7 @@ stages:
       - task: AzureCLI@2
         displayName: 'deploy bicep template'
         inputs:
-          azureSubscription: $(azureSubscription) 
+          azureSubscription: ToyWebsite
           scriptType: 'bash'
           scriptLocation: 'inlineScript'
           inlineScript: |
