Update pipeline.yaml for Azure Pipelines

--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -46,6 +46,7 @@ stages:
           inlineScript: |
             az group create --name $(ResourceGroupName) --location $(location)
             az deployment group create \
+            --name $(Build.BuildNumber) \
             --template-file $(Build.SourcesDirectory)/drop/module.bicep \
             --parameters $(Build.SourcesDirectory)/drop/main.parameters.json \
             --resource-group $(ResourceGroupName) \
