Update pipeline.yaml for Azure Pipelines

--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -45,4 +45,4 @@ stages:
           scriptLocation: 'inlineScript'
           inlineScript: |
             az group create --name $(ResourceGroupName) --location $(location)
-            az deployment group create --name $(Build.BuildNumber) --template-file $(Build.SourcesDirectory)/drop/module.bicep --parameters $(Build.SourcesDirectory)/drop/main.parameters.json --resource-group $(ResourceGroupName) --parameters --location $(location)
+            az deployment group create --name $(Build.BuildNumber) --template-file $(Build.SourcesDirectory)/drop/module.bicep --parameters $(Build.SourcesDirectory)/drop/main.parameters.json --resource-group $(ResourceGroupName) --location $(location)
