Update pipeline.yaml for Azure Pipelines

--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -44,5 +44,8 @@ stages:
           scriptType: 'pscore'
           scriptLocation: 'inlineScript'
           inlineScript: |
-            az group create --name $(ResourceGroupName) --location $(location)
-            az deployment group create --name $(Build.BuildNumber) --template-file $(Build.SourcesDirectory)/drop/module.bicep --parameters $(Build.SourcesDirectory)/drop/main.parameters.json --resource-group $(ResourceGroupName) --location $(location)
+            az deployment group create  `
+                --template-file $(Build.SourcesDirectory)/drop/module.bicep `
+                --parameters $(Build.SourcesDirectory)/drop/main.parameters.json `
+                --resource-group $(ResourceGroupName) `
+                --parameters resourcePrefix=$(resourceprefix)
