--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -4,48 +4,27 @@ pool:
   vmImage: ubuntu-latest
 
 stages:
-- stage: Build
-  jobs:
-  - job: Build
-    steps:
-
-      - task: CopyFiles@2
-        displayName: 'Include templates in the artifact'
-        inputs:
-          SourceFolder: 'src'
-          Contents: |
-            main.bicep
-            main.parameters.json
-          TargetFolder: '$(Build.ArtifactStagingDirectory)'
-
-      - task: PublishBuildArtifacts@1
-        displayName: 'Publish artifact'
-        inputs:
-          PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-          ArtifactName: 'drop'
-          publishLocation: 'Container'
 
 - stage: deploy
   jobs:
   - job: deploy
     steps:
 
-      - task: DownloadBuildArtifacts@0
-        displayName: 'Download artifact'
-        inputs:
-          buildType: 'current'
-          downloadType: 'single'
-          artifactName: 'drop'
-          downloadPath: '$(System.ArtifactsDirectory)'
       - task: AzureCLI@2
-        displayName: 'deploy bicep template'
+        displayName: 'Deploy Bicep file'
         inputs:
-          azureSubscription: ToyWebsite
-          scriptType: 'pscore'
+          azureSubscription: 'ToyWebsite'
+          scriptType: 'bash'
           scriptLocation: 'inlineScript'
           inlineScript: |
-            az deployment group create  `
-                --template-file $(System.ArtifactsDirectory)/drop/module.bicep `
-                --parameters $(System.ArtifactsDirectory)/drop/main.parameters.json `
-                --resource-group $(ResourceGroupName) `
-                --parameters resourcePrefix=$(resourceprefix)
+            # Creating a resource group
+            az group create \
+              --name $(ResourceGroupName) \
+              --location $(location)
+            # Deploying Bicep file
+            az deployment group create \
+              --name $(Build.BuildNumber) \
+              --resource-group $(ResourceGroupName) \
+              --template-file $(Build.SourcesDirectory)/src/module.bicep \
+              --parameters @$(Build.SourcesDirectory)/src/main.parameters.json \
+              --parameters location=$(location)
