--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -18,10 +18,9 @@ stages:
           scriptLocation: 'inlineScript'
           inlineScript: |
             # Deploying Bicep file
-            az deployment create \
+            az deployment sub create \
               --name $(Build.BuildNumber) \
               --location $(location)
-              --resource-group $(ResourceGroupName) \
               --template-file $(Build.SourcesDirectory)/src/module.bicep \
               --parameters @$(Build.SourcesDirectory)/src/main.parameters.json \
               --parameters location=$(location)
