Update pipeline.yaml for Azure Pipelines

--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -20,6 +20,6 @@ stages:
             # Deploying Bicep file
             az deployment sub create \
               --name $(Build.BuildNumber) \
-              --location $(location)
+              --location $(location) \
               --template-file $(Build.SourcesDirectory)/src/module.bicep \
               --parameters @$(Build.SourcesDirectory)/src/main.parameters.json
