Update pipeline.yaml for Azure Pipelines

--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -14,7 +14,7 @@ stages:
         inputs:
           SourceFolder: 'src'
           Contents: |
-            main.bicep
+            module.bicep
             main.parameters.json
           TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
